--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-theme="halloween">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/starfighter.svg" />
+    <link rel="icon" type="image/svg+xml" href="../assets/starfighter.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chayanon Resume</title>
   </head>
